 - Fixed AWACS graphics for all nations
 - Fixed the MBT7 for India
 - Fixed the error spam from the peace conference
 - Fixed an error spam due to a bad unicode character
 - Fixed a bunch of non-MTG errors in the OOBs
 - Fixed the 2017 SOV NSB file
 - Fixed duplicate triggers about SCO ideas for Officer International Training law
 - Fixed missing localisation for insult opinion modifier

Content:
 - Increased cost to drill oil for China
 - Increased cost to make anti DPP campaign
 - Chinese Tourism Restricted idea now also should add additional expenses
 - Buffed idea The Four Asian Tigers Legacy
 - Various changes for GCC focus tree and decisions
 - Various changes for Chinese focus tree, decisions and ideas
 - Rebalanced some effects for Chinese STE decisions
 - Modules and other minor techs now can have XP dumped on them for tech bonuses
 - Added new Naval Doctrines for Bluewater and Greenwater Navy
 - Rebalanced decisions to encourage/deport migrants for Gulf countries
 - Updated Jamaican political parties

Focus Tree:
 - Tweaks to the American Focus Tree
 - Improved Generic Tree (Added new focuses and rebalanced some stuff)

Graphics:
 - Changed the Office Sector building to be a light blue so it's more obvious when it is available

GUI:
 - Better position for things in topbar
 - Fixed the Ship Filters section in the naval production screen
 - Fixed interface in Naval Intel Ledger
 - Small interface tweaks in country view window

Localisation:
 - Improve localisation for Rentier state - include information on when it will be removed
 - Various improvements in EU focuses localisation
 - Adjusted localisation for SOV cannons

Modding:
 - Introduced four new custom modifiers for content purposes

Performance:
 - Optimized on_startup on action so the game should load in faster
 - Optimized the Investment System UI so it should run smoother in game

Quality of Life (QoL):
 - Added Project Count to International Investments Tooltip