@@ -172,11 +172,8 @@
  ISR_israeli_arabs: "Israeli Arabs"
  ISR_israeli_arabs_desc: ""
 
-
-
  ISR_targeted_assassination: "Targeted Assassination"
  ISR_targeted_assassination_desc: "In order to hinder our enemies we will kill their top generals and other individuals who wish us harm"
-
 
  palestinian_checkpoints_tt: "This will decrease Happiness by §R15§! and decrease terrorism by §G20§!"
  racial_profiling_tt: "This will decrease Happiness by §R2§! and decrease terrorism by §G25§!"
@@ -202,11 +199,7 @@
  raid_strongholds: "Raid Strongholds"
  subsidize_industries: "Subsidize Industries"
 
-
-
-
  move_embassy_to_jerusalem: "Move our Embassy to Jerusalem"
-
 
  ISR_happiness_west_bank: "§G[?hap_west_bank]%§!"
  ISR_happiness_gaza: "§G[?hap_gaza]%§!"
