@@ -25,7 +25,6 @@ Civil_war_decisions = {
 				}
 			}
 		}
-
 	}
 
 	smuggle_small_arms = {
@@ -54,7 +53,6 @@ Civil_war_decisions = {
 				}
 			}
 		}
-
 	}
 
 	smuggle_heavy_weapons = {
@@ -75,7 +73,6 @@ Civil_war_decisions = {
 				amount = 75
 				producer = SOV
 			}
-
 			set_temp_variable = { treasury_change = -0.2 }
 			modify_treasury_effect = yes
 		}
@@ -94,7 +91,6 @@ Civil_war_decisions = {
 				}
 			}
 		}
-
 	}
 
 	buy_fuel_from_black_market = {
@@ -114,7 +110,7 @@ Civil_war_decisions = {
 			factor = 10
 			modifier = {
 				factor = 1.5
-				has_fuel  < 50
+				has_fuel < 50
 			}
 		}
 	}
