@@ -1847,10 +1847,15 @@ recognition_category = {
 	move_embassy_to_jerusalem = {
 		visible = {
 			NOT = {
-			original_tag = ISR
-			original_tag = PAL
+				original_tag = ISR
+				original_tag = PAL
+			}
+			country_exists = PAL
+			IST = {
+				exists = yes
+				owns_state = 207
+			}
 		}
-	}
 
 		cost = 15
 		days_remove = 8
@@ -1859,25 +1864,29 @@ recognition_category = {
 		complete_effect = {
 			if = {
 				limit = {
-				has_idea = great_power
-			}
-		ISR = {
-			add_political_power = 50
-			}
-		}
-	else = {
-		if = {
-			limit = {
-				has_idea = regional_power
+					OR = {
+						has_idea = superpower
+						has_idea = great_power
+						has_idea = large_power
+					}
 				}
-				ISR = {
-					add_political_power = 35
+			}
+			ISR = {
+				add_political_power = 50
+			}
+			else = {
+				if = {
+					limit = {
+						has_idea = regional_power
+					}
+					ISR = {
+						add_political_power = 35
+					}
 				}
 			}
 			else = {
 				ISR = {
 					add_political_power = 20
-					}
 				}
 			}
 		}
