@@ -963,12 +963,12 @@ country_event = {
 						add_opinion_modifier = { target = ROOT modifier = succeded_coup }
 						news_event = { id = News_influence.3 }
 					}
-					#add 20% to ROOT influence
-					set_temp_variable = { percent_change = 10 }
-					set_temp_variable = { tag_index = ROOT.id }
-					set_temp_variable = { influence_target = THIS.id }
-					change_influence_percentage = yes
 				}
+				#add 20% to ROOT influence
+				set_temp_variable = { percent_change = 10 }
+				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { influence_target = FROM.id }
+				change_influence_percentage = yes
 				#add event to country and world
 				hidden_effect = {
 					every_country = {
@@ -984,13 +984,6 @@ country_event = {
 				custom_effect_tooltip = influence_coup_largest_discovered_TT
 
 				FROM = {
-					#remove a LOT of influence
-					set_temp_variable = { percent_change = -15 }
-					set_temp_variable = { tag_index = ROOT.id }
-					set_temp_variable = { influence_target = THIS.id }
-					change_influence_percentage = yes
-
-
 					hidden_effect = {
 						add_opinion_modifier = {
 							target = ROOT
@@ -998,6 +991,11 @@ country_event = {
 						}
 					}
 				}
+				#remove a LOT of influence
+				set_temp_variable = { percent_change = -15 }
+				set_temp_variable = { tag_index = ROOT.id }
+				set_temp_variable = { influence_target = FROM.id }
+				change_influence_percentage = yes
 				#add event to country and world
 				hidden_effect = {
 					every_country = {
