@@ -161,7 +161,7 @@
  NOR_stx_europe_ship_company: "STX Europe"
  NOR_umoe_mandal_ship_company: "UMOE Mandal"
  PAK_heavy_industries_taxila_vehicle_company: "Heavy Industries Taxila"
- PAK_pakistan_aeronautical_complex_aircraft_company: "Pakistan Aeronautical Complex"
+ PAK_pakistan_aeronautical_complex_aircraft_company: "PAC"
  PAK_integrated_defence_systems_infantry_weapon_company: "Integrated Defence Systems"
  PAK_pakistan_ordnance_factories_infantry_weapon_company: "Pakistan Ordnance Factories"
  PAK_karachi_shipyard_ship_company: "Karachi Shipyard"
