@@ -2042,7 +2042,7 @@
  MNC.Nat_Populism: "£generic_Nat_Populism_small Rassemblement pour la Famille Monégasque"
  MNC.Nat_Populism_desc: ""
  #Liechentesein
- LIC.conservatism: "£generic_conservatism_small Progressive Citizens' Party"
+ LIC.conservatism: "£generic_conservatism_small Progressive Citizens Party"
  LIC.conservatism_desc: ""
  LIC.liberalism: "£generic_liberalism_small Patriotic Union"
  LIC.liberalism_desc: ""
