@@ -56,6 +56,7 @@ Bugfixes:
  - Fixed the 2017 SOV NSB file
  - Fixed duplicate triggers about SCO ideas for Officer International Training law
  - Fixed missing localisation for insult opinion modifier
+ - Fixed decision Move our Embassy to Jerusalem
 
 Content:
  - Increased cost to drill oil for China
@@ -87,6 +88,7 @@ Localisation:
  - Improve localisation for Rentier state - include information on when it will be removed
  - Various improvements in EU focuses localisation
  - Adjusted localisation for SOV cannons
+ - Some localisation fixes in User Interface
 
 Modding:
  - Introduced four new custom modifiers for content purposes
